--- a/subdirectory/index.html
+++ b/subdirectory/index.html
@@ -5,7 +5,7 @@
 		<title>Enter Your Name Here</title>
 	</head>	
 	<body>
-		<p style="color:blue;font-size:20px;border-top-style: dotted;"> <b><i>Hello</i></b>	 W<br/>o		&ensp;rld</p>
+		<p> <b><i>Hello</i></b>	 W<br/><hr/>o		&ensp;rld</p>
 		
 		<ol type="i">
 			<li>what</li>
@@ -30,7 +30,7 @@
 			
 			<li>
 			
-			<a href="subdirectory/index.html" target="_blank">
+			<a href="../index.html">
 				Click Me
 			<a>
 			
@@ -38,7 +38,7 @@
 			
 		</ul>
 		
-		<dl id="def">
+		<dl>
 		
 			<dt>profile summary</dt>
 			<dd>i am sally maysi a</dd>
