- set branch back to week 1 state

--- a/index.html
+++ b/index.html
@@ -2,50 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Enter Your Name Here</title>
+		<title>
+            Cameron Cintron
+        </title>
 	</head>	
 	<body>
-		<p style="color:blue;font-size:20px;border-top-style: dotted;"> <b><i>Hello</i></b>	 W<br/>o		&ensp;rld</p>
-		
-		<ol type="i">
-			<li>what</li>
-			<li>when</li>
-			<li>where</li>
-			<li>why</li>
-		
-		</ol>
-		
-		<ul>
-			<li>who</li>
-			
-
-				<ul>
-					<li>what</li>
-					<li>when</li>
-				</ul>
-
-			
-			<li>where</li>
-			<li>why</li>
-			
-			<li>
-			
-			<a href="subdirectory/index.html" target="_blank">
-				Click Me
-			<a>
-			
-			</li>
-			
-		</ul>
-		
-		<dl id="def">
-		
-			<dt>profile summary</dt>
-			<dd>i am sally maysi a</dd>
-			<dt>profile summary</dt>
-			<dd>i am sally maysi a</dd>
-		</dl>
-		
+        <p>
+            Hello World
+        </p>		
 	</body>
 </html>
 
