- make contact me page open in same window instead of new window

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
 			
             <li>
-                <a href="contact.html" target="_blank">
+                <a href="contact.html">
 				    Contact Me
                 </a>
             </li>
