week-4 first pass

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </li>
                     
 			<li>
-                <a href="https://www.google.com" target="_blank">
+                <a href="fan-site/index.html">
 				    Fan Site
                 </a>
             </li>
