--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	</head>	
 	<body>
         <h1>
-            Cameron Cintron's Reference Website Week 5
+            Cameron Cintron's Reference Website Week 6
         </h1>
          
 		<p> 
@@ -66,7 +66,7 @@
             </li>
 			
             <li>
-                <a href="https://www.google.com" target="_blank">
+                <a href="survey/index.html">
 				    Survey Site
                 </a>
             </li>
