--- a/index.html
+++ b/index.html
@@ -1,15 +1,104 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>
-            Cameron Cintron
-        </title>
-	</head>	
-	<body>
-        <p>
-            Hello World
-        </p>		
-	</body>
-</html>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>Web Development 1</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="styles/styles.css">
+
+</head>
+
+<body class="container">
+    <br>
+
+    <h1 class="row justify-content-center">
+        Web Development 1 Reference Site
+    </h1>
+
+    <br>
+
+    <h3>
+        Congratulations on taking the first step on your journey making websites!
+        <br>
+        <br>
+        This website is meant to serve as a convenient resource to aid you in your website development journey. There are many examples and we'll go over them during class lectures. Please refer to the links below.
+    </h3>
+
+    <br>
+
+    <h1>
+        Useful Links
+    </h1>
+
+    <div class="list-group list-group-mine">
+        <a href="#" class="list-group-item list-group-item-action" download>
+            Syllabus
+        </a>
+        <a href="mailto: ccintron@colum.edu" class="list-group-item list-group-item-action" download>
+            Instructor Email (or just email me through canvas)
+        </a>
+        <a href="files/index.html" class="list-group-item list-group-item-action" download>
+            Not sure where to start? Click this link and download a template HTML File
+        </a>
+    </div>
+
+    <br>
+
+    <h1>
+        Weekly Material
+    </h1>
+
+    <div class="list-group list-group-mine">
+        <a href="lectures/week-1/index.html" class="list-group-item list-group-item-action">
+            Week 1
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 2
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 3
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 4
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 5
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 6
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 7
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 8
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 9
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 10
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 11
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 12
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 13
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 14
+        </a>
+        <a href="#" class="list-group-item list-group-item-action">
+            Week 15
+        </a>
+    </div>
+
+</body></html>
