--- a/lectures/week-1/index.html
+++ b/lectures/week-1/index.html
@@ -14,12 +14,75 @@
 </head>
 
 <body class="container">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <br>
 
-    <h1 class="row justify-content-center">
+    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body fixed-top" data-bs-theme="dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="../../index.html">Web Development I</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="../../index.html">Home</a>
+                    </li>
+                    <!--
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Weeks
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Week 1</a></li>
+                            <li><a class="dropdown-item" href="../week-2/index.html">Week 2</a></li>
+                            <li><a class="dropdown-item" href="../week-3/index.html">Week 3</a></li>
+                            <li><a class="dropdown-item" href="../week-4/index.html">Week 4</a></li>
+                            <li><a class="dropdown-item" href="../week-5/index.html">Week 5</a></li>
+                            <li><a class="dropdown-item" href="../week-6/index.html">Week 6</a></li>
+                            <li><a class="dropdown-item" href="../week-7/index.html">Week 7</a></li>
+                            <li><a class="dropdown-item" href="../week-8/index.html">Week 8</a></li>
+                            <li><a class="dropdown-item" href="../week-9/index.html">Week 9</a></li>
+                            <li><a class="dropdown-item" href="../week-10/index.html">Week 10</a></li>
+                            <li><a class="dropdown-item" href="../week-11/index.html">Week 11</a></li>
+                            <li><a class="dropdown-item" href="../week-12/index.html">Week 12</a></li>
+                            <li><a class="dropdown-item" href="../week-13/index.html">Week 13</a></li>
+                            <li><a class="dropdown-item" href="../week-14/index.html">Week 14</a></li>
+                            <li><a class="dropdown-item" href="../week-15/index.html">Week 15</a></li>
+
+                            <!--
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            -->
+                        </ul>
+                    </li>
+                    <!--
+                    <li class="nav-item">
+                        <a class="nav-link disabled" aria-disabled="true">Link</a>
+                    </li>
+                    -->
+                </ul>
+
+                <h2>
+                    Week 1
+                </h2>
+
+                <!--
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+                -->
+            </div>
+        </div>
+    </nav>
+
+
+    <h1 class="row justify-content-center" style="padding-top: 100px;">
         Week 1
     </h1>
 
@@ -456,7 +519,7 @@
         Anatomy of an HTML file
     </h4>
 
-    <pre>
+    <pre class="border border-white">
 &lt;!--This is a comment. Begin writing a comment with a lt sign, an ! and 2 hypens. End with 2 hypens and a gt sign --&gt;
 &lt;!--Everything in between will not be processed--&gt;
 &lt;!--
@@ -509,7 +572,7 @@
         <br>
         down to the below code snippet
     </h4>
-    <pre>
+    <pre class="border border-white">
 &lt;!doctype html&gt;
 &lt;html lang="en"&gt;   
     &lt;head&gt
@@ -550,7 +613,7 @@
 
     </h5>
 
-    <pre>
+    <pre class="border border-white">
 &lt;h1&gt;
     Hello World
 &lt;/h1&gt;   
@@ -577,7 +640,7 @@
     <h5>H5</h5>
     <h6>H6</h6>
     <br>
-    <pre>
+    <pre class="border border-white">
 &lt;h1&gt;H1&lt;/h1&gt;
 &lt;h2&gt;H2&lt;/h2&gt;
 &lt;h3&gt;H3&lt;/h3&gt;
@@ -591,7 +654,7 @@
     </h5>
 
     <p>The p tag</p>
-    <pre>
+    <pre class="border border-white">
 &lt;p&gt;The p tag&lt;/p&gt;
     </pre>
 
@@ -605,7 +668,7 @@
         <sub>subscript</sub>
 
     </p>
-    <pre>
+    <pre class="border border-white">
 &lt;b&gt;bold&lt;/b&gt;
 &lt;i&gt;italic&lt;/i&gt;
 &lt;sup&gt;superscript&lt;/sup&gt;
@@ -630,12 +693,12 @@
         <br>
         4&emsp;Spaces
     </h5>
-    <pre>
-1&nbsp;Space
+    <pre class="border border-white">
+1&#38;nbsp;Space
 &lt;br&gt;
-2&ensp;Spaces
+2&#38;ensp;Spaces
 &lt;br&gt;
-4&emsp;Spaces
+4&#38;emsp;Spaces
     </pre>
 
     <h4>
@@ -646,7 +709,7 @@
         Additionally, you can change the <span style="font-size:36px">size</span> or <span style="color:green">color</span> of your text by inserting the style attribute into your tag or injecting a span tag into your content. Using the style attribute I changed the entire content of this section to be red with a size of 18px. With the span attribute I overwrote those changes to the word size and color.
     </h5>
 
-    <pre>
+    <pre class="border border-white">
 &lt;h5 style="color:red; font-size:18px"&gt;
     Additionally, you can change the &lt;span style="font-size:36px"&gt;size&lt;/span&gt; or &lt;span style="color:green"&gt;color&lt;/span&gt; of your text by inserting the style attribute into your tag or injecting a span tag into your content. Using the style attribute I changed the entire content of this section to be red with a size of 18px. With the span attribute I overwrote those changes to the word size and color.
 &lt;/h5&gt;
@@ -677,6 +740,11 @@
     </h4>
 
 
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
 </body></html>
