--- a/index.html
+++ b/index.html
@@ -57,46 +57,46 @@
         <a href="lectures/week-1/index.html" class="list-group-item list-group-item-action">
             Week 1
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-2/index.html" class="list-group-item list-group-item-action">
             Week 2
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-3/index.html" class="list-group-item list-group-item-action">
             Week 3
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-4/index.html" class="list-group-item list-group-item-action">
             Week 4
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-5/index.html" class="list-group-item list-group-item-action">
             Week 5
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-6/index.html" class="list-group-item list-group-item-action">
             Week 6
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-7/index.html" class="list-group-item list-group-item-action">
             Week 7
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-8/index.html" class="list-group-item list-group-item-action">
             Week 8
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-9/index.html" class="list-group-item list-group-item-action">
             Week 9
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-10/index.html" class="list-group-item list-group-item-action">
             Week 10
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-11/index.html" class="list-group-item list-group-item-action">
             Week 11
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-12/index.html" class="list-group-item list-group-item-action">
             Week 12
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-13/index.html" class="list-group-item list-group-item-action">
             Week 13
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-14/index.html" class="list-group-item list-group-item-action">
             Week 14
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="lectures/week-15/index.html" class="list-group-item list-group-item-action">
             Week 15
         </a>
     </div>
