- week 2 links section - week 1 file name convention - homepage file name convention

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <a href="files/index.html" class="list-group-item list-group-item-action" download>
             Not sure where to start? Click this link and download a template HTML File
         </a>
+        <a href="https://ed.fnal.gov/lincon/tech_web_naming.shtml" target="_blank" class="list-group-item list-group-item-action">File Naming Conventions</a>
     </div>
 
     <br>
@@ -101,4 +102,6 @@
         </a>
     </div>
 
-</body></html>
+</body>
+
+</html>
