--- a/lectures/week-1/index.html
+++ b/lectures/week-1/index.html
@@ -535,6 +535,18 @@
 &lt;/html&gt;
     </pre>
 
+    <h4>
+        Also don't include spaces in your file names.
+        <br>
+        You will be miserable.
+        <br>
+        Use hyphens "virtual-shop.html" instead of "virtual shop.html"
+        <br>
+        Files should be all lowercase
+        <br>
+        <a href="https://ed.fnal.gov/lincon/tech_web_naming.shtml" target="_blank">File Naming Conventions</a>
+    </h4>
+
     <br>
     <h4>
         Anatomy of an HTML tag
@@ -567,7 +579,21 @@
         Not every tag requires a closing tag. The meta tag for instance just configure your
         <br>
         web page and does not apply any effect to content.
+        <br>
+        <br>
+        Speaking of the meta tag, you may notice it has extra stuff after the word "meta"
+        <br>
+        These are called attributes and there are many different kinds that don't all
+        <br>
+        necessarily work for every single tag so you'll need to do the research to figure out
+        <br>
+        what is required/possible
     </h5>
+
+    <pre class="border border-white">
+&lt;meta name="viewport" content="width=device-width, initial-scale=1"&gt;  
+    </pre>
+
     <br>
     <h4>
         Text based tags
@@ -682,6 +708,8 @@
         <br>
         <a href="hw-1-example.html" target="_blank">Example</a>
     </h4>
+
+    <hr>
 
     <h2>
         Readings Due Next Week
