- week 2 tables, assignment 2 example

--- a/lectures/week-1/index.html
+++ b/lectures/week-1/index.html
@@ -689,6 +689,15 @@
         There are many predefined colors <a href="https://www.w3.org/wiki/CSS/Properties/color/keywords" target="_blank">https://www.w3.org/wiki/CSS/Properties/color/keywords</a>
         <br>
         There are also many other styles <a href="https://www.w3.org/wiki/CSS/Properties" target="_blank">https://www.w3.org/wiki/CSS/Properties</a>
+        <br>
+        <br>
+        For each style you add you need to separate it by a semicolon ;
+        <br>
+        Each style has a key and a value where the key is the identifier (name) of the thing you want to add
+        <br>
+        such as a color and the value is what you are setting that key to.
+        <br>
+        They are both separated by a colon :
     </h5>
 
     <hr>
@@ -703,10 +712,10 @@
         For this week's assignment you will simply take the index.html file that you had to upload to GitHub in the "Uploading New Files and File Edits" section and populate it with content. I want you to fill the web page with 600 words where the topic is "About Me". Don't write this for me. Write this for yourself and any potential visitors to your site. This could be future employers so be professional which includes quality grammar.
         <br>
         <br>
-        You should use the basic tags we covered today to make it look halfway decent. We'll start looking at how to make things colorful next week.
+        You should use the basic tags we covered today to make it look halfway decent. We'll start looking at how to make things colorful in 2 weeks.
         <br>
         <br>
-        <a href="hw-1-example.html" target="_blank">Example</a>
+        <a href="hw/index.html" target="_blank">Example</a>
     </h4>
 
     <hr>
