--- a/lectures/week-2/index.html
+++ b/lectures/week-2/index.html
@@ -27,7 +27,7 @@
     </h1>
 
     <h4 class="row justify-content-center">
-        Links, Images, Lists, Tables, and Basic CSS
+        Links, Images, Lists, and Tables
     </h4>
 
     <h2>
@@ -805,20 +805,247 @@
     <h2>Tables</h2>
 
     <h4>
+        Tables are a great way to present vast amounts of information. Look at this <a href="https://secure.runescape.com/m=itemdb_rs/top100" target="_blank">RuneScape Example</a>
+        <br>
+        We can create something similar and very conveniently. Bolding automatically is applied to row and column headers which is a nice feature as well.
+        <br>
+        <br>
+        We need to wrap our entire table with the &lt;table&gt; table tag.
+        <br>
+        For each row we need to decalre a &lt;tr&gt; table row tag.
+        <br>
+        For each cell in the row we need to declare a &lt;td&gt; table data tag.
+        <br>
+        If a particular cell is supposed to be a header then instead of &lt;td&gt; you can specify a &lt;th&gt; table header tag.
+        <br>
+        Additionally, to specify if the header is a row or column header you can add
+        <br>
+        the scope attribute and either specify "row" or "column". This will help site readers. (See below example code)
+    </h4>
+    <br>
+    <table style="color: white; border: 2px solid #92D57C">
+        <tr style="background-color: #107C7C">
+            <th scope="col">Item</th>
+            <th scope="col">Member Only</th>
+            <th scope="col">Min</th>
+            <th scope="col">Max</th>
+            <th scope="col">Median</th>
+            <th scope="col">Total</th>
+        </tr>
+        <tr style="background-color: #3FAA85">
+            <th scope="row" style="color:#F9F871">Spirit Shards</th>
+            <td>No</td>
+            <td>135.6m</td>
+            <td>598.2m</td>
+            <td>366.6m</td>
+            <td>2.3b</td>
+        </tr>
+        <tr style="background-color: #234E5A">
+            <th scope="row" style="color:#F9F871">Spirit Rune</th>
+            <td>Yes</td>
+            <td>10.1m</td>
+            <td>24.5m</td>
+            <td>17.3m</td>
+            <td>115.5m</td>
+        </tr>
+    </table>
+    <br>
+    <pre class="border border-white">
+&lt;table style="color: white; border: 2px solid #92D57C"&gt;                
+    &lt;tr style="background-color: #107C7C"&gt;
+        &lt;th scope="col"&gt;Item&lt;/th&gt;
+        &lt;th scope="col"&gt;Member Only&lt;/th&gt;
+        &lt;th scope="col"&gt;Min&lt;/th&gt;
+        &lt;th scope="col"&gt;Max&lt;/th&gt;
+        &lt;th scope="col"&gt;Median&lt;/th&gt;
+        &lt;th scope="col"&gt;Total&lt;/th&gt;
+    &lt;/tr&gt;
+    &lt;tr style="background-color: #3FAA85"&gt;
+        &lt;th scope="row" style="color:#F9F871"&gt;Spirit Shards&lt;/th&gt;
+        &lt;td&gt;No&lt;/td&gt;
+        &lt;td&gt;135.6m&lt;/td&gt;
+        &lt;td&gt;598.2m&lt;/td&gt;
+        &lt;td&gt;366.6m&lt;/td&gt;
+        &lt;td&gt;2.3b&lt;/td&gt;
+    &lt;/tr&gt;
+    &lt;tr style="background-color: #234E5A"&gt;
+        &lt;th scope="row" style="color:#F9F871"&gt;Spirit Rune&lt;/th&gt;
+        &lt;td&gt;Yes&lt;/td&gt;
+        &lt;td&gt;10.1m&lt;/td&gt;
+        &lt;td&gt;24.5m&lt;/td&gt;
+        &lt;td&gt;17.3m&lt;/td&gt;
+        &lt;td&gt;115.5m&lt;/td&gt;
+    &lt;/tr&gt;
+&lt;/table&gt;
+    </pre>
+
+    <br>
+
+    <h4>
+        The above code has extra style information that isn't necessary but demonstartes some things you can do to make the table look nicer.
+        <br>
+        <br>
+        You can also configure the size the cells by adding the rowspan attribute to the &lt;td&gt; tags
+        <br>
+        <br>
+        It only works if you've essentially created the space for that cell to extend the number of cells you've specified in the rowspan/colspan attributes.
+        <br>
+        In the below example I added a new row above my column names and filled in 2
+        <br>
+        empty columns of data and a third column that I said to span 4 columns total.
+        <br>
+        Since the rest of my table has enough columns it will successfully work.
+        <br>
+        You will need to play with this and understand it through trial and error.
+
+    </h4>
+    <br>
+    <table style="color: white; border: 2px solid #92D57C">
+        <tr style="background-color: #107C7C">
+            <th scope="col"></th>
+            <th scope="col"></th>
+            <th scope="col" colspan="4" style="text-align: center">Sold</th>
+            <th scope="col"></th>
+        </tr>
+        <tr style="background-color: #107C7C">
+            <th scope="col">Item</th>
+            <th scope="col">Member Only</th>
+            <th scope="col">Min</th>
+            <th scope="col">Max</th>
+            <th scope="col">Median</th>
+            <th scope="col">Total</th>
+            <th scope="col"></th>
+        </tr>
+        <tr style="background-color: #3FAA85">
+            <th scope="row" style="color:#F9F871">Spirit Shards</th>
+            <td>No</td>
+            <td>135.6m</td>
+            <td>598.2m</td>
+            <td>366.6m</td>
+            <td>2.3b</td>
+            <td rowspan="2" style="background-color: #107C7C">RuneScape Items</td>
+        </tr>
+        <tr style="background-color: #234E5A">
+            <th scope="row" style="color:#F9F871">Spirit Rune</th>
+            <td>Yes</td>
+            <td>10.1m</td>
+            <td>24.5m</td>
+            <td>17.3m</td>
+            <td>115.5m</td>
+
+        </tr>
+
+    </table>
+
+    <br>
+
+    <pre class="border border-white">
+&lt;table style="color: white; border: 2px solid #92D57C"&gt;  
+    &lt;tr style="background-color: #107C7C"&gt;
+        &lt;th scope="col"&gt;&lt;/th&gt;
+        &lt;th scope="col"&gt;&lt;/th&gt;
+        &lt;th scope="col" colspan="4" style="text-align: center"&gt;Sold&lt;/th&gt;
+        &lt;th scope="col"&gt;&lt;/th&gt;
+    &lt;/tr&gt;
+    &lt;tr style="background-color: #107C7C"&gt;
+        &lt;th scope="col"&gt;Item&lt;/th&gt;
+        &lt;th scope="col"&gt;Member Only&lt;/th&gt;
+        &lt;th scope="col"&gt;Min&lt;/th&gt;
+        &lt;th scope="col"&gt;Max&lt;/th&gt;
+        &lt;th scope="col"&gt;Median&lt;/th&gt;
+        &lt;th scope="col"&gt;Total&lt;/th&gt;
+        &lt;th scope="col"&gt;&lt;/th&gt;
+    &lt;/tr&gt;
+    &lt;tr style="background-color: #3FAA85"&gt;
+        &lt;th scope="row" style="color:#F9F871"&gt;Spirit Shards&lt;/th&gt;
+        &lt;td&gt;No&lt;/td&gt;
+        &lt;td&gt;135.6m&lt;/td&gt;
+        &lt;td&gt;598.2m&lt;/td&gt;
+        &lt;td&gt;366.6m&lt;/td&gt;
+        &lt;td&gt;2.3b&lt;/td&gt;
+        &lt;!--This cell will take up 2 rows worth of space--&gt;
+        &lt;td rowspan="2" style="background-color: #107C7C"&gt;RuneScape Items&lt;/td&gt;
+    &lt;/tr&gt;
+    &lt;tr style="background-color: #234E5A"&gt;
+        &lt;th scope="row" style="color:#F9F871"&gt;Spirit Rune&lt;/th&gt;
+        &lt;td&gt;Yes&lt;/td&gt;
+        &lt;td&gt;10.1m&lt;/td&gt;
+        &lt;td&gt;24.5m&lt;/td&gt;
+        &lt;td&gt;17.3m&lt;/td&gt;
+        &lt;td&gt;115.5m&lt;/td&gt;
+        &lt;!--
+            And because the above row has a cell in this column that takes up 2 spaces we should not add a &lt;td&gt;  
+            Because otherwise that will create a new column!
+        --&gt;
+    &lt;/tr&gt;
+&lt;/table&gt;
+    </pre>
+
+    <h4>
+        Lastly, something to note is in the above implementations the header and body content is not easily distinguishable.
+        <br>
+        <br>
+        However, you can actually organize a table much like a webpage with a head,body, and even footer section using the &lt;thead&gt; &lt;tbody&gt; and &lt;tfoot&gt; tags
+        <br>
+        <br>
+        See a copy of the above table using these new tags below.
+        <br>
 
     </h4>
 
     <br>
 
-    <hr>
+    <table style="color: white; border: 2px solid #92D57C">
+        <thead>
+            <tr style="background-color: #107C7C">
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col" colspan="4" style="text-align: center">Sold</th>
+                <th scope="col"></th>
+            </tr>
+            <tr style="background-color: #107C7C">
+                <th scope="col">Item</th>
+                <th scope="col">Member Only</th>
+                <th scope="col">Min</th>
+                <th scope="col">Max</th>
+                <th scope="col">Median</th>
+                <th scope="col">Total</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
 
-    <h2>
-        Basic CSS
-    </h2>
+        <tbody>
+            <tr style="background-color: #3FAA85">
+                <th scope="row" style="color:#F9F871">Spirit Shards</th>
+                <td>No</td>
+                <td>135.6m</td>
+                <td>598.2m</td>
+                <td>366.6m</td>
+                <td>2.3b</td>
+                <td rowspan="2" style="background-color: #107C7C">RuneScape Items</td>
+            </tr>
+            <tr style="background-color: #234E5A">
+                <th scope="row" style="color:#F9F871">Spirit Rune</th>
+                <td>Yes</td>
+                <td>10.1m</td>
+                <td>24.5m</td>
+                <td>17.3m</td>
+                <td>115.5m</td>
+            </tr>
+        </tbody>
 
-    <br>
-
-    <h4>CSS stuff</h4>
+        <tfoot>
+            <tr style="background-color: #000000">
+                <td></td>
+                <td>This</td>
+                <td>Is</td>
+                <td>The</td>
+                <td>Footer</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tfoot>
+    </table>
 
     <hr>
 
@@ -834,21 +1061,30 @@
         Change the homepage such that it looks like a homepage, add links to other pages.
         Modify your assignment 1 index.html to be about-me.html.
         <br>
-        Add a link called assignments. This page can be pretty plain but your other assignments will go in here.
+        <br>
+        Create a page called my favorite games/books/whatever you want.
+        Give me your top 10 favorite of whatever you choose. Add pictures, use lists or tables to describe each item
         <br>
         <br>
-        Don't worry about formatting. We'll look at positioning elements next week.
+        Be sure to include images as well.
         <br>
         <br>
-        <a href="hw-1-example.html" target="_blank">Example</a>
+        Don't worry about formatting.
+        We'll look at positioning elements next week.
+        <br>
+        <br>
+        The below example probably reflects barely a 50% grade given it doesn't have enough content.
+        <br>
+        <br>
+        <a href="hw/index.html" target="_blank">Example</a>
     </h4>
+    <br>
 
     <h2>
         Readings Due Next Week
     </h2>
 
     <hr>
-
     <h4>
         Chapters 5,6,10 HTML & CSS Jon Duckett
     </h4>
