- week 3 css, change required readings on week 1/2

--- a/lectures/week-2/index.html
+++ b/lectures/week-2/index.html
@@ -84,8 +84,7 @@
         <li class="list-group-item">Anatomy of URL</li>
         <li class="list-group-item">Formatting Code</li>
         <li class="list-group-item">Links</li>
-        <li class="list-group-item">Lists, Images, Tables</li>
-        <li class="list-group-item">Basic CSS</li>
+        <li class="list-group-item">Images, Lists, Tables</li>
         <li class="list-group-item">Questions?</li>
         <li class="list-group-item">Class Time To Work</li>
     </ul>
@@ -1086,7 +1085,7 @@
 
     <hr>
     <h4>
-        Chapters 5,6,10 HTML & CSS Jon Duckett
+        Chapters 3, 4, 5, 6 HTML & CSS Jon Duckett
     </h4>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
