--- a/lectures/week-3/index.html
+++ b/lectures/week-3/index.html
@@ -20,7 +20,6 @@
         fetch('../nav.html')
             .then(response => response.text())
             .then(text => document.getElementById('#nav').innerHTML = text);
-
     </script>
 
     <h1 class="row justify-content-center" style="padding-top: 100px;">
@@ -475,18 +474,19 @@ img {
         For this week's assignment modify your website to move away from inline styles to external CSS.
         <br>
         <br>
-        Every page should be loading the styles from a CSS file now.
+        Every page should be loading the styles from a CSS file now. This shouldn't take too long so if it does then you're overthinking and need to reach out to me for clarification asap.
         <br>
         <br>
-        Improve the formatting of your content. Make elements centered, spaced, etc. Make it feel like a real website.
+        Improve the formatting of your content. Make elements centered, spaced, etc. Make it feel like a real website. You shouldn't have a lot of content at this point so this shouldn't take a terribly long amount of time either.
         <br>
         <br>
-        Additionally, add a new web page based. For this new web page you will be creating <a href="https://artsandculture.google.com/asset/composition-with-red-blue-and-yellow/5QG2Fm_LGUWAHA" target="_blank">Mondrian Art</a>
+        Additionally, add a new web page link to your homepage. For this new web page you will be creating <a href="https://artsandculture.google.com/asset/composition-with-red-blue-and-yellow/5QG2Fm_LGUWAHA" target="_blank">Mondrian Art</a>
+        <br>
         <br>
         Make me a work of art!
         <br>
         <br>
-        The below example probably reflects barely a 50% grade since the main website that isn't the Mondrian Art doesn't have any formatting or styles applied..
+        The below example probably reflects a 50% grade. If you do the above requirements and improve your other pages and move to CSS then that will get you another 25%. If you make your Mondrian art more fancy then that'll get you the rest of the points. My example is basic and only has 6 boxes. Aim for 12.
         <br>
         <br>
         <a href=" hw/index.html" target="_blank">Example</a>
@@ -509,6 +509,4 @@ img {
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 
-</body>
-
-</html>
+</body></html>
